# LibLapin

./: CMakeLists.txt
cmake/: lapin-config.cmake.in
